[package]
name = "rsh-wgpu"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = "0.20"
wgpu = "0.5"
futures = "0.3"
rusty_shades = { git = "https://github.com/JCapucho/rusty-shades.git" }
env_logger = "0.7"
bytemuck = "1.2"
