[package]
name = "rsh-wgpu"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = "0.20"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "7087e3141c2982361fb6e8b171475485bad5a1a8" }
futures = "0.3"
rusty_shades = { path = "../rusty_shades" }
env_logger = "0.7"
bytemuck = "1.2"
